# wdb

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install_local.sh  pyproject.toml  pytest.ini  setup.cfg
.github/workflow/: python-publish.yml
.github/workflows/: python-publish.yml
client/: setup.py
client/wdb/: __init__.py  __main__.py  _compat.py  breakpoint.py  ext.py  state.py  ui.py  utils.py
client/wdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
flask_wdb_hook/: setup.py
pytest_wdb/: pytest_wdb.py  setup.py  test_wdb.py
server/: .gitignore  Dockerfile  Gruntfile.coffee  make.sh  package.json  setup.py  wdb.server.py
server/coffees/: wdb.coffee
server/wdb.server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/wdb_server/: __init__.py  state.py  streams.py  utils.py
src/client/: setup.py
src/server/: Dockerfile  bower.json  package.json  setup.py
src/test/: -test_utils.py  conftest.py
src/tu_proyecto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: conftest.py  test_breaks.py  test_error.py  test_forks.py  test_main.py  test_misc.py  test_movement.py  test_no_error.py  test_objects.py  test_osforks.py  test_prompt.py  test_threads.py  test_trace.py  test_utils.py
test/scripts/: error_ignored_in_script.py  error_in_script.py  error_in_with.py  error_in_with_advanced.py  error_in_with_below.py  error_in_with_under.py  error_not_ignored_in_script.py  forks.py  latin-1.py  objects.py  osfork.py  recursive_object.py  threads.py  tornado_server.py  (+2 more)
wdb_over_pdb/: pdb.py  setup.py
(+12 files in other folders)
